--- a/2017.08.md
+++ b/2017.08.md
@@ -38,7 +38,7 @@ Any type is converted to a Boolean value:
  `!!Any value ------> Boolean value`
 `Boolean(Any value) ------> Boolean value`
 ##### Various types of testing methods (at least three ways to analyze the pros and cons of each method)
-Method One: 
+- Method One: 
 ```
  var type = (function(global) {
     var cache = {};
@@ -55,12 +55,12 @@ Method One:
 ```
 ![c6046bf7-5909-4ff0-88cc-dc8a0a4f403e.png](http://upload-images.jianshu.io/upload_images/7293338-ec1ca128be6f59d6.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 It's very accurate to detect data types in this way but the code is very long
-方法二:
+- Method Two:
 `Object.prototype.toString.call(data)`
 
 ![e0c024d3-a712-46ec-bfe0-7ed62b7c4519.png](http://upload-images.jianshu.io/upload_images/7293338-3e0af8fd92ad4535.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 Get the data type that is not direct and cut again
-方法三:
+-  Method Three:
  `typeof` It can be used to detect basic types `string`  `number`  `boolean` `undefined` `function`
 `instanceof`Test object, function, return Boolean value
 To detect a null  Straightforward and straightforward ` data === unll`
